--- a/pdf_templete/templete.html
+++ b/pdf_templete/templete.html
@@ -387,7 +387,16 @@ b{
       <br />
 
       <div  class="invoice-main">
-          <div class="invoice-left col-md-6"><b>Invoiced To:</b><address>Alex Farnandes<br>450 E 96th St, Indianapolis,<br>WRHX+8Q IN 46240,<br>United States</address></div>
+          <div class="invoice-left col-md-6"><b>Invoiced To:</b>
+            <address>
+              Alex Farnandes<br>
+              alex@gmail.com<br>
+              9658668475,9658669652<br>
+              Odisha, India<br>
+              Bhubaneswar, 754225<br>
+              A/E-1171, Kapilprasad1, Bhimatangi1
+            </address>
+          </div>
           <div class="invoice-right col-md-6"><b>Pay To:</b><address>Invce Inc<br>4510 E 96th St, Indianapolis,<br>IN 46240, United States<br>info@invce.com</address></div>
       </div>
 
