--- a/pdf_templete/templete.html
+++ b/pdf_templete/templete.html
@@ -446,7 +446,7 @@ b{
     <b>Payment Info:</b> Paid
     </div>
     <div class="col-md-3 invoice-right">
-    <table class="total-table">
+    <table class="total-table" style="width: 188px;float: right;">
       <tbody>
         <tr>
           <th>Sub Total:</th>
